cleaned up code

--- a/.templates/nextjsTemplate.tmpl
+++ b/.templates/nextjsTemplate.tmpl
@@ -1,6 +1,13 @@
 // # This is a comment 
 
-// app/main.tsx
+// app/page.tsx
+export default function Home() {
+  return (
+    <div className="page">
+      <h1>THIS IS SICK!</h1>
+    </div>
+  );
+}
 
 // styles/globals.scss
 * {
@@ -12,4 +19,15 @@
 // README.md
 
 // .gitignore
+./node_modules
 
+// # Dependencies
+
+next
+react
+react-dom
+scss
+
+// # DevDependencies
+typescript
+@types/react
